@startuml

title __TEXTSEARCHERBETA's Class Diagram__\n

  package  {
    package indexing {
      abstract class Aindexer {
      }
    }
  }
  

  package  {
    package textStructure {
      class Block {
      }
    }
  }
  

  package  {
    package textStructure {
      class BlockResult {
      }
    }
  }
  

  package  {
    package textStructure {
      class Corpus {
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.dictionary {
          class DictionaryIndexer {
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class Edge {
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class EdgeBag {
          }
        }
      }
    }
  }
  

  package  {
    package textStructure {
      class Entry {
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class GeneralizedSuffixTree {
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        interface IdataStructure {
        }
      }
    }
  }
  

  package  {
    package indexing {
      class Indexer {
      }
    }
  }
  

  package  {
    package rules {
      interface IparsingRule {
      }
    }
  }
  

  package  {
    package utils {
      class MD5 {
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.naive {
          class NaiveSearch {
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.naive {
          class NaiveSearchRK {
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class Node {
          }
        }
      }
    }
  }
  

  package  {
    package rules {
      class STmovieParsingRule {
      }
    }
  }
  

  package  {
    package rules {
      class STtvSeriesParsingRule {
      }
    }
  }
  

  package  {
    package rules {
      class SimpleParsingRule {
      }
    }
  }
  

  package  {
    package utils {
      class Stemmer {
      }
    }
  }
  

  package  {
    package utils {
      class Stopwords {
      }
    }
  }
  

  package  {
    class TextSearcher {
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.suffixtree {
          class Utils {
          }
        }
      }
    }
  }
  

  package  {
    package textStructure {
      class WordResult {
      }
    }
  }
  

  Aindexer o-- IparsingRule : parseRule
  Aindexer o-- IdataStructure : dataStruct
  Aindexer o-- Corpus : origin
  BlockResult -up-|> Block
  Corpus -up-|> Iterable
  DictionaryIndexer -up-|> IdataStructure
  DictionaryIndexer o-- Corpus : origin
  Edge o-- Node : dest
  EdgeBag -up-|> Map
  Entry -up-|> Iterable
  Entry o-- IparsingRule : parseRule
  Entry o-- IdataStructure : index
  Entry o-- Corpus : origin
  GeneralizedSuffixTree o-- Node : root
  GeneralizedSuffixTree o-- Node : activeLeaf
  Indexer -up-|> Aindexer
  NaiveSearch -up-|> IdataStructure
  NaiveSearch o-- Corpus : corpus
  NaiveSearchRK -up-|> NaiveSearch
  Node o-- Node : suffix
  STmovieParsingRule -up-|> IparsingRule
  STtvSeriesParsingRule -up-|> IparsingRule
  SimpleParsingRule -up-|> IparsingRule
  WordResult o-- Block : location


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
